@@ -34,11 +34,13 @@ t/PYX-SGML-Tags/03-new.t
 t/PYX-SGML-Tags/04-parse-char.t
 t/PYX-SGML-Tags/05-parse-instruction.t
 t/PYX-SGML-Tags/06-parse-comment.t
-t/PYX-SGML-Tags/07-parse-element.t
-t/PYX-SGML-Tags/08-parse_file-char.t
-t/PYX-SGML-Tags/09-parse_file-instruction.t
-t/PYX-SGML-Tags/10-parse_file-comment.t
-t/PYX-SGML-Tags/11-parse_file-element.t
+t/PYX-SGML-Tags/07-parse-element-sgml.t
+t/PYX-SGML-Tags/08-parse-element-xml.t
+t/PYX-SGML-Tags/09-parse_file-char.t
+t/PYX-SGML-Tags/10-parse_file-instruction.t
+t/PYX-SGML-Tags/11-parse_file-comment.t
+t/PYX-SGML-Tags/12-parse_file-element-sgml.t
+t/PYX-SGML-Tags/13-parse_file-element-xml.t
 Tags.pm
 xt/PYX-SGML-Tags/01-pod_coverage.t
 xt/PYX-SGML-Tags/02-pod.t
